# simp

./: .gitignore  .project_env  CMakeBuildOpts.txt  CMakeLists.txt  README.md  notes.md
.cache/clangd/index/: alloc.c.A92CE4D31519531A.idx  alloc.h.0A2402258B68602D.idx  array.c.1C397799738F8ADD.idx  array.h.7338682DD14279EB.idx  ast.c.AE97C2CC1752EC9B.idx  ast.h.7A98FF967474D773.idx  cmdline.c.0D55959D09C4A34E.idx  cmdline.h.42D7C253C3AF7B75.idx  errors.h.5A23E4854F7388E4.idx  fileio.c.D3085257CA4ACDD9.idx  hash.c.A5EA179B4D8578AA.idx  hash.h.DB8C4A30B1885404.idx  main.c.F3E49B820F5CA7D8.idx  pointer_list.c.4F2DB22953D90AE3.idx  pointer_list.h.91F922472208FF41.idx  string_buffer.c.8E9CF32519E47280.idx  string_buffer.h.6987E0E36EBC0AC2.idx  string_list.c.7AA5C4256C88546B.idx  string_list.h.918C2286DC8C01DC.idx  tokens.c.E691C6E67F3D14B1.idx  tokens.h.50566402737C0E34.idx  trace.c.37F41ED0F6DA2FCF.idx  trace.h.5EA7ED92B25D7504.idx
docs/: doxygen.cfg
scripts/: setup
src/: CMakeLists.txt  ast.h  class.c  class.h  cmdline.c  common.h  errors.h  expressions.c  expressions.h  filebuf.c  filebuf.h  function.c  function.h  keywords.txt  main.c  memory.c  memory.h  module.c  module.h  parser.c  parser.h  parser.y  ptrlst.c  ptrlst.h  reference.c  reference.h  scanner.c  scanner.h  scanner.l  sort.py  strptr.c  strptr.h  tokens.c  tokens.h
src/common/: array.c  array.h  cmdline.c  cmdline.h  fileio.c  fileio.h  pointer_list.c  pointer_list.h  string_buffer.c  string_buffer.h  string_list.c  string_list.h  trace.c  trace.h
src/main/: CMakeLists.txt  main.c
src/parser/: CMakeLists.txt  c_parser.c  c_parser.output  c_scanner.c  c_scanner.h  parser.y  scanner.l  tokens.c  tokens.h
tests/: assignments.simp  if_else.simp  include1.simp  include2.simp  inline_test.simp  namespace_with_class.simp  tst2.simp
tests/grammar/: Makefile  parser.y.old1  parser.y.old2  parser.y.old3  scanner.c  scanner.h  scanner.l  test1.simp
